--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <div style="text-align:left">
             Papers must comply with the <a href='http://ceur-ws.org/Vol-XXX/CEURART.zip'>CEUR-WS</a>template <br>
             Papers are submitted in PDF format via the workshop’s <a
-              href=''>Easychair (TBA)</a> submission pages<br>
+              href='https://easychair.org/conferences/?conf=dl4kg2022'>Easychair</a> submission pages<br>
             <br>
 	<!--Reviewing Policy:
 	<ul>
