--- a/index.html
+++ b/index.html
@@ -367,20 +367,16 @@
           <h2 class="section-heading text-uppercase">Program Committee (Tentative)</h2>
           <div style="text-align:left">
             <ul>
-              <li>Russa Biswas, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
-              <li>Danilo Dessi', Unviersity of Cagliari, Italy.</li>
-              <li>Stefan Dietze, L3S Hannover, Germany.</li>
-              <li>Mauro Dragoni, Fondazione Bruno Kessler, Italy.</li>
-              <li>Genet Asefa Gesese, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
-              <li>Pascal Hitzler, Kansas State University, USA.</li>
-              <li>Mayank Kejriwal, Information Science Institute, University of Southern California, USA.</li>
-              <li>Gerard de Melo, Rutgers University, USA.</li>
-              <li>Amedeo Napoli, LORIA, CNRS, France.</li>
-              <li>Finn Årup Nielsen, Technical University of Denmark, Denmark.</li>
-              <li>Thiviyan Thanapalasingam, Vrije University of Amsterdam, the Netherlands.</li>
-              <li>Veronika Thost, IBM Research, USA.</li>
-              <li>Volker Tresp, Siemens AG, Germany.</li>
-              <li>Lei Zhang, FIZ-Karlsruhe, Karlsruhe Institute of Technology, Germany.</li>
+              <li>Pierre  Monnin  Orange, Belfort, France</li>
+		<li>Andreea Iana, University of Mannheim, Germany</li>
+		<li>Genet Asefa Gesese, FIZ Karlsruhe – Leibniz-Institut für Informationsinfrastruktur, Germany</li>
+		<li>Yiyi Chen, FIZ Karlsruhe  – Leibniz-Institut für Informationsinfrastruktur, Germany</li>
+		<li>Daniel Daza, Vrije Universiteit Amsterdam, the Netherlands</li>
+		<li>Mehdi Ali, University of Bonn, Germany</li>
+		<li>Heiko Paulheim, University of Mannheim, Germany</li>
+		<li>Russa Biswas, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>
+		<li>Paul Groth, University of Amsterdam, the Netherlands</li>
+		<li>Ricardo Usbeck, Hamburg University, Germany</li>
             </ul>
           </div>
         </div>
