--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
 		<li>Russa Biswas, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>
 		<li>Paul Groth, University of Amsterdam, the Netherlands</li>
 		<li>Ricardo Usbeck, Hamburg University, Germany</li>
+		   <li>Gerard De Melo, University of Potsdam, Germany</li>
             </ul>
           </div>
         </div>
