--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Keynote Speaker</h2><br/><br/>
-		<h3 class="text-uppercase"> TBD</h3>
+		<h3 class="text-uppercase"> <a href="https://wms.cs.kuleuven.be/people/lucderaedt">Luc de Raedt</a></h3>
           <div class="col-sm-4">
             <div class="team-member">
 		  
