--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		<h3 class="text-uppercase"> <a href="https://wms.cs.kuleuven.be/people/lucderaedt">Luc de Raedt</a></h3>
           <div class="col-sm-4">
             <div class="team-member">
-		  
+		  <img class="mx-auto rounded-circle" src="img/team/Luc-De-Raedt.jpeg" alt="">
             </div>
           </div> 
 <div class="col-sm-12">
