--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <h2 class="section-heading text-uppercase">Important Dates</h2>
           <div style="text-align:left">
            <ul>
-              <li>Full, Short and Position paper submission deadline: August 13th, 2022</li>
+              <li>Full, Short and Position paper submission deadline: <s>August 13th, 2022</s>August 21st, 2022</li>
               <li>Notification of Acceptance: September 10th, 2022</li>
               <li>Camera-ready paper due: September 20th, 2022</li>
               <li>ISWC 2021 Workshop day:  October 23-24th, 2022</li>
