--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-uppercase">Program Committee (Tentative)</h2>
+          <h2 class="section-heading text-uppercase">Program Committee</h2>
           <div style="text-align:left">
             <ul>
               <li>Pierre  Monnin  Orange, Belfort, France</li>
@@ -372,12 +372,14 @@
 		<li>Genet Asefa Gesese, FIZ Karlsruhe – Leibniz-Institut für Informationsinfrastruktur, Germany</li>
 		<li>Yiyi Chen, FIZ Karlsruhe  – Leibniz-Institut für Informationsinfrastruktur, Germany</li>
 		<li>Daniel Daza, Vrije Universiteit Amsterdam, the Netherlands</li>
+		<li>Danilo Dessi, University of Cagliari, Italy</li>  
 		<li>Mehdi Ali, University of Bonn, Germany</li>
 		<li>Heiko Paulheim, University of Mannheim, Germany</li>
 		<li>Russa Biswas, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>
 		<li>Paul Groth, University of Amsterdam, the Netherlands</li>
+		<li>Rima Tuerker, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>  
 		<li>Ricardo Usbeck, Hamburg University, Germany</li>
-		   <li>Gerard De Melo, University of Potsdam, Germany</li>
+		<li>Gerard De Melo, University of Potsdam, Germany</li>
             </ul>
           </div>
         </div>
