--- a/index.html
+++ b/index.html
@@ -219,7 +219,55 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Workshop Program and Proceedings</h2>
-                   <h3 class="section-subheading">TBD (All times are in CEST.)</h3>
+                    <h3 class="section-subheading">Workshop Program. (All times are in CET.)</h3>
+
+          <b>10:00 - 10:10	Welcome & Opening	 </b><br />
+          <hr>
+		<br />
+     <b>Session 1: 10:10 - 11:10 </b><br />
+      <hr>
+    <ul style="text-align:justify">
+            <li>10:10 - 10:30   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio.</li>
+            <li>10:30 - 10:50   Transformer-based Subject Entity Detection in Wikipedia Listings  Nicolas Heist and Heiko Paulheim.</li>
+            <li>10:50 - 11:10   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah</li>
+
+          </ul>
+
+
+          <br /><br />
+          <hr>
+          <b>11:10 - 11:30 	Coffee break	 </b><br />
+          <hr>
+          <b>Session 2: 11:30 - 12:30 </b><br />
+		  <hr>
+          <ul style="text-align:justify">
+          	<li>11:30 - 11:50    Knowledge Graph Embeddings for Link Prediction: Beware of Semantics!  Nicolas Hubert, Pierre Monnin, Armelle Brun and Davy Monticolo</li>
+            <li>11:50 - 12:10   Neuro-symbolic learning for dealing with sparsity in cultural heritage image archives: an empirical journey Agnese Chiatti and Enrico Daga</li>
+           <li>12:10 - 12:30   Bilingual Question Answering over DBpedia Abstracts through Machine Translation and BERT  Michalis Mountantonakis, Michalis Bastakis, Loukas Mertzanis and Yannis Tzitzikas. Tiresias</li>
+
+          </ul>
+          <hr>
+          <b>12:30 - 13:30	LUNCH BREAK</b><br />
+          <hr><br />
+          <b>Session 3: 13:30 - 14:50 </b> <br />
+		  <hr>
+          <ul style="text-align:justify">
+        <li>13:30 - 14:10   Keynote Speaker: Luc de Raedt </li>
+        <li>14:10 - 14:30   A Closer Look at Sum-based Embeddings for Knowledge Graphs Containing Procedural Knowledge  Richard Nordsieck, Michael Heider, Anton Hummel and Joerg Haehner. </li>
+        <li>14:30 - 14:50   Knowledge Graph Embeddings for Causal Relation Prediction Aamod Khatiwada, Sola Shirai, Kavitha Srinivas and Oktie Hassanzadeh. </li>
+          </ul>
+          <hr>
+          <b>14:50 - 15:10 COFFEE BREAK</b> <br />
+          <hr>
+          <b>Session 4: 15:10 - 16:10</b> <br />
+		  <hr>
+          <ul style="text-align:justify">
+          <li>15:10 - 15:30    Invited Talk: Afshin </li> 
+          <li>15:30 - 15:50   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan.</li>
+          <li>15:50 - 16:10   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou.</li>
+		
+    <li>16:10 - 16:20	Closing	</li>
+  </ul>
 
         </div>
       </div>
