--- a/index.html
+++ b/index.html
@@ -249,10 +249,11 @@
           <hr>
           <b>12:30 - 13:30	LUNCH BREAK</b><br />
           <hr><br />
-          <b>Session 3: 13:30 - 14:50 </b> <br />
+          <b>Keynote: Luc de Raedt </b> <br />
+		  <hr><br />
+          <b>Session 3: 14:10 - 14:50 </b> <br />
 		  <hr>
           <ul style="text-align:justify">
-        <li>13:30 - 14:10   Keynote Speaker: Luc de Raedt </li>
         <li>14:10 - 14:30   A Closer Look at Sum-based Embeddings for Knowledge Graphs Containing Procedural Knowledge  Richard Nordsieck, Michael Heider, Anton Hummel and Joerg Haehner. </li>
         <li>14:30 - 14:50   Knowledge Graph Embeddings for Causal Relation Prediction Aamod Khatiwada, Sola Shirai, Kavitha Srinivas and Oktie Hassanzadeh. </li>
           </ul>
