--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <b>Session 4: 15:10 - 16:10</b> <br />
 		  <hr>
           <ul style="text-align:justify">
-          <li>15:10 - 15:30    Invited Talk: Afshin </li> 
+          <li>15:10 - 15:30    Invited Talk: Afshin Sadeghi </li> 
           <li>15:30 - 15:50   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan.</li>
           <li>15:50 - 16:10   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou.</li>
 		
