--- a/index.html
+++ b/index.html
@@ -426,9 +426,11 @@
 		<li>Heiko Paulheim, University of Mannheim, Germany</li>
 		<li>Russa Biswas, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>
 		<li>Paul Groth, University of Amsterdam, the Netherlands</li>
+		<li>Longquan Jiang, University of Hamburg, Germany</li>
 		<li>Rima Tuerker, FIZ Karlsruhe - Leibniz Institute for Information Infrastructure, Germany</li>  
 		<li>Ricardo Usbeck, Hamburg University, Germany</li>
 		<li>Gerard De Melo, University of Potsdam, Germany</li>
+		<li> Xi Yan, University of Hamburg, Germany</li>
             </ul>
           </div>
         </div>
