--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Workshop at <a href="https://iswc2022.semanticweb.org/">ISWC 2022</a> on</div>
+        <div class="intro-lead-in">Workshop at <a href="https://iswc2022.semanticweb.org/">ISWC 2022</a> to be held on October 24, 2022 on</div>
         <div class="intro-heading text-uppercase">Deep Learning for Knowledge Graphs</div>
 	       <!--<div class="intro-lead-in">Proceedings are available <a href="http://ceur-ws.org/Vol-2635/">on-line</a>.</div>-->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#home">More Details!</a>
@@ -219,7 +219,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Workshop Program and Proceedings</h2>
-                    <h3 class="section-subheading">Workshop Program. (All times are in CET.)</h3>
+                    <h3 class="section-subheading">Workshop Program. (Date: October 24, 2022. All times are in CET.)</h3>
 
           <b>10:00 - 10:10	Welcome & Opening	 </b><br />
           <hr>
