--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
      <b>Session 1: 10:10 - 11:10 </b><br />
       <hr>
     <ul style="text-align:justify">
-            <li>10:10 - 10:30   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio.</li>
-            <li>10:30 - 10:50   Transformer-based Subject Entity Detection in Wikipedia Listings  Nicolas Heist and Heiko Paulheim.</li>
-            <li>10:50 - 11:10   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah</li>
+            <li><b>10:10 - 10:30</b>   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio.</li>
+            <li><b>10:30 - 10:50</b>   Transformer-based Subject Entity Detection in Wikipedia Listings  Nicolas Heist and Heiko Paulheim.</li>
+            <li><b>10:50 - 11:10</b>   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah</li>
 
           </ul>
 
@@ -241,9 +241,9 @@
           <b>Session 2: 11:30 - 12:30 </b><br />
 		  <hr>
           <ul style="text-align:justify">
-          	<li>11:30 - 11:50    Knowledge Graph Embeddings for Link Prediction: Beware of Semantics!  Nicolas Hubert, Pierre Monnin, Armelle Brun and Davy Monticolo</li>
-            <li>11:50 - 12:10   Neuro-symbolic learning for dealing with sparsity in cultural heritage image archives: an empirical journey Agnese Chiatti and Enrico Daga</li>
-           <li>12:10 - 12:30   Bilingual Question Answering over DBpedia Abstracts through Machine Translation and BERT  Michalis Mountantonakis, Michalis Bastakis, Loukas Mertzanis and Yannis Tzitzikas. Tiresias</li>
+          	<li><b>11:30 - 11:50</b>    Knowledge Graph Embeddings for Link Prediction: Beware of Semantics!  Nicolas Hubert, Pierre Monnin, Armelle Brun and Davy Monticolo</li>
+            <li><b>11:50 - 12:10</b>   Neuro-symbolic learning for dealing with sparsity in cultural heritage image archives: an empirical journey Agnese Chiatti and Enrico Daga</li>
+           <li><b>12:10 - 12:30</b>   Bilingual Question Answering over DBpedia Abstracts through Machine Translation and BERT  Michalis Mountantonakis, Michalis Bastakis, Loukas Mertzanis and Yannis Tzitzikas. Tiresias</li>
 
           </ul>
           <hr>
@@ -254,8 +254,8 @@
           <b>Session 3: 14:10 - 14:50 </b> <br />
 		  <hr>
           <ul style="text-align:justify">
-        <li>14:10 - 14:30   A Closer Look at Sum-based Embeddings for Knowledge Graphs Containing Procedural Knowledge  Richard Nordsieck, Michael Heider, Anton Hummel and Joerg Haehner. </li>
-        <li>14:30 - 14:50   Knowledge Graph Embeddings for Causal Relation Prediction Aamod Khatiwada, Sola Shirai, Kavitha Srinivas and Oktie Hassanzadeh. </li>
+        <li><b>14:10 - 14:30</b>   A Closer Look at Sum-based Embeddings for Knowledge Graphs Containing Procedural Knowledge  Richard Nordsieck, Michael Heider, Anton Hummel and Joerg Haehner. </li>
+        <li><b>14:30 - 14:50</b>   Knowledge Graph Embeddings for Causal Relation Prediction Aamod Khatiwada, Sola Shirai, Kavitha Srinivas and Oktie Hassanzadeh. </li>
           </ul>
           <hr>
           <b>14:50 - 15:10 COFFEE BREAK</b> <br />
@@ -263,9 +263,9 @@
           <b>Session 4: 15:10 - 16:10</b> <br />
 		  <hr>
           <ul style="text-align:justify">
-          <li>15:10 - 15:30    Invited Talk: Afshin Sadeghi </li> 
-          <li>15:30 - 15:50   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan.</li>
-          <li>15:50 - 16:10   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou.</li>
+          <li><b>15:10 - 15:30</b>   <b>Invited Talk: Stream Embedding for Accrescent Knowledge Graphs. Afshin Sadeghi.</b> </li> 
+          <li><b>15:30 - 15:50</b>   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan.</li>
+          <li><b>15:50 - 16:10</b>   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou.</li>
 		
     <li>16:10 - 16:20	Closing	</li>
   </ul>
