--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           <li><b>15:30 - 15:50</b>   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan.</li>
           <li><b>15:50 - 16:10</b>   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou.</li>
 		
-    <li>16:10 - 16:20	Closing	</li>
+    <li><b>16:10 - 16:20</b>	Closing	</li>
   </ul>
 
         </div>
