--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             communities related to Deep Learning, Knowledge Graphs, and NLP join their forces in order to develop more
             effective algorithms and applications.
             This workshop, in the wake of other similar efforts at previous Semantic Web conferences such as ESWC2018 as
-            <a href="http://usc-isi-i2.github.io/DL4KGS/">DL4KGs</a> and ISWC2018, <a href="https://alammehwish.github.io/dl4kg-eswc/">ESWC2019</a>, <a href="https://alammehwish.github.io/dl4kg_eswc_2020/">ESWC 2020</a>, <a href="https://alammehwish.github.io/dl4kg2021/">ISWC2021</a> aims to reinforce the relationships
+            <a href="http://usc-isi-i2.github.io/DL4KGS/">DL4KGs</a> and ISWC2018, <a href="https://alammehwish.github.io/dl4kg-eswc/">ESWC2019</a>, <a href="https://alammehwish.github.io/dl4kg_eswc_2020/">ESWC 2020</a>, <a href="https://alammehwish.github.io/dl4kg
+		    /">ISWC2021</a> aims to reinforce the relationships
             between these communities and foster inter-disciplinary research in the areas of KG, Deep Learning, and
             Natural Language Processing.
           </p>
@@ -323,7 +324,7 @@
               <li>Full, Short and Position paper submission deadline: <s>August 13th, 2022</s>August 21st, 2022</li>
               <li>Notification of Acceptance: September 16th, 2022</li>
               <li>Camera-ready paper due: September 25th, 2022</li>
-              <li>ISWC 2021 Workshop day:  October 23-24th, 2022</li>
+              <li>ISWC 2022 Workshop day:  October 24th, 2022</li>
             </ul>
             <div style="text-align:center"><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
                 href="https://docs.google.com/document/d/e/2PACX-1vRasCE37F0MHB4HaX3a-vMqujXjFSwe0LmbtmfkEdDjgYjqeKo2t-Buf7pSLp3BgE46Yyj9iyFrQN77/pub">Read
