--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <b>Session 4: 15:10 - 16:10</b> <br />
 		  <hr>
           <ul style="text-align:justify">
-          <li><b>15:10 - 15:30</b>   <b>Invited Talk: Stream Embedding for Accrescent Knowledge Graphs. Afshin Sadeghi.</b> </li> 
+          <li><b>15:10 - 15:30</b>   <b>Invited Talk: Stream Embedding for Accrescent Knowledge Graphs. Afshin Sadeghi.</b>  (<a href="papers/invited-talk.pdf">abstract</a>)</li> 
           <li><b>15:30 - 15:50</b>   Multi-label Classification using BERT and Knowledge Graphs with a Limited Training Dataset  Malick Ebiele, Lucy McKenna, Malika Bendechache and Rob Brennan. (<a href="papers/paper-9.pdf">paper</a>)</li>
           <li><b>15:50 - 16:10</b>   CosmOntology: Creating an Ontology of the Cosmos [position paper] Vasilis Efthymiou. (<a href="papers/paper-10.pdf">paper</a>)</li>
 		
