Added keynote speaker bio, title, and abstract.

--- a/index.html
+++ b/index.html
@@ -200,16 +200,18 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Keynote Speaker</h2><br/><br/>
 		<h3 class="text-uppercase"> <a href="https://wms.cs.kuleuven.be/people/lucderaedt">Luc de Raedt</a></h3>
+		Director of Leuven.AI, KU Leuven
           <div class="col-sm-12">
             <div class="team-member">
 		  <img class="mx-auto rounded-circle" src="img/team/Luc-De-Raedt.jpeg" alt="">
             </div>
+		  Luc De Raedt is full professor at the Department of Computer Science, KU Leuven, and director of Leuven.AI, the newly founded KU Leuven Institute for AI. He is a guestprofessor at Örebro University in the Wallenberg AI, Autonomous Systems and Software Program. He received his PhD in Computer Science from KU Leuven (1991), and was full professor (C4) and Chair of Machine Learning at the Albert-Ludwigs-University Freiburg, Germany (1999-2006). His research interests are in Artificial Intelligence, Machine Learning and Data Mining, as well as their applications. He is well known for his contributions in the areas of learning and reasoning, in particular, for his work on probabilistic and inductive programming. He co-chaired important conferences such as ECMLPKDD 2001 and ICML 2005 (the European and International Conferences on Machine Learning), ECAI 2012 and will chair IJCAI in 2022 (the European and international AI conferences). He is on the editorial board of Artificial Intelligence, Machine Learning and the Journal of Machine Learning Research. He is a EurAI and AAAI fellow, an IJCAI Trustee and received and ERC Advanced Grant in 2015.
           </div> 
 <div class="col-sm-12">
-           <b>Title:</b> TBD </br>
-	<b>Abstract:</b> TBD
-
-
+	<b>Title:</b> From Probabilistic Logics to Neuro-Symbolic Artificial Intelligence</br>
+	<b>Abstract:</b> A central challenge to contemporary AI is to integrate learning and reasoning. The integration of learning and reasoning has been studied for decades already in the fields of statistical relational artificial intelligence and probabilistic programming. StarAI has focussed on unifying logic and probability, the two key frameworks for reasoning, and has extended this probabilistic logics machine learning principles.
+I will argue that StarAI and Probabilistic Logics form an ideal basis for developing neuro-symbolic artificial intelligence techniques. Thus neuro-symbolic computation = StarAI + Neural Networks.
+Many parallels will be drawn between these two fields and will be illustrated using the Deep Probabilistic Logic Programming language DeepProbLog.</b> 
         </div>
       </div>
 
