--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Many parallels will be drawn between these two fields and will be illustrated us
     <ul style="text-align:justify">
            <li><b>10:10 - 10:30</b>   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio. (<a href="papers/paper-1.pdf">paper</a>)</li>
             <li><b>10:30 - 10:50</b>   Transformer-based Subject Entity Detection in Wikipedia Listings  Nicolas Heist and Heiko Paulheim. (<a href="papers/paper-2.pdf">paper</a>, <a href="https://drive.google.com/file/d/1VopBngry6SVE_2B-gj5CH9tCa4jtyMLe/view?usp=sharing">video</a>)</li>
-            <li><b>10:50 - 11:10</b>   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah. (<a href="papers/paper-3.pdf">paper</a>, <a href="papers/paper-9.pdf">video</a>)</li>
+            <li><b>10:50 - 11:10</b>   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah. (<a href="papers/paper-3.pdf">paper</a>)</li>
 
 
           </ul>
