--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
-
+<style>
+        #blink {
+            font-size: 20px;
+            font-weight: bold;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -230,9 +236,19 @@ Many parallels will be drawn between these two fields and will be illustrated us
      <b>Session 1: 10:10 - 11:10 </b><br />
       <hr>
     <ul style="text-align:justify">
-           <li><b>10:10 - 10:30</b>   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio. (<a href="papers/paper-1.pdf">paper</a>)</li>
+           <li><b>10:10 - 10:30</b>   Towards A Question Answering System over Temporal Knowledge Graph Embedding Kristian Otte, Kristian Simoni Vestermark, Huan Li and Daniele Dell'Aglio. (<a href="papers/paper-1.pdf">paper</a>, <a href="https://drive.google.com/file/d/18mQGNCPcoQaTYHoUenVDwn92e3qOZeY2/view?usp=sharing">video</a>)<p id="blink"  style="display:inline; color:red">
+        Best paper!
+    </p><script type="text/javascript">
+        var blink = 
+            document.getElementById('blink');
+  
+        setInterval(function () {
+            blink.style.opacity = 
+            (blink.style.opacity == 0 ? 1 : 0);
+        }, 1000); 
+    </script></li>
             <li><b>10:30 - 10:50</b>   Transformer-based Subject Entity Detection in Wikipedia Listings  Nicolas Heist and Heiko Paulheim. (<a href="papers/paper-2.pdf">paper</a>, <a href="https://drive.google.com/file/d/1VopBngry6SVE_2B-gj5CH9tCa4jtyMLe/view?usp=sharing">video</a>)</li>
-            <li><b>10:50 - 11:10</b>   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah. (<a href="papers/paper-3.pdf">paper</a>, <a href="papers/paper-9.pdf">video</a>)</li>
+            <li><b>10:50 - 11:10</b>   Improving Language Model Predictions via Prompts Enriched with Knowledge Graphs Ryan Brate, Minh-Hoang Dang, Fabian Hoppe, Yuan He, Albert Meroño-Peñuela and Vijay Sadashivaiah. (<a href="papers/paper-3.pdf">paper</a>)</li>
 
 
           </ul>
