--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ Many parallels will be drawn between these two fields and will be illustrated us
 		
     <li><b>16:10 - 16:20</b>	Closing	</li>
   </ul>
+		
+		<img src="img/talk.jpeg" width="80%"/>
 
         </div>
       </div>
